Prevent collapse of long name example

--- a/public/css/320.less
+++ b/public/css/320.less
@@ -254,12 +254,11 @@ ul.stats {
       background-color: @white;
       font-size: 0.857em;
       padding-left: 1em;
+      padding-right: 1em;
       margin: 0.25em 0;
     }
-    img {
-      position: absolute;
-      top: 0.5em;
-      left: 12em;
+    strong {
+      margin-right: 1em;
     }
   }
   .badge-maker {
