--- a/public/css/768.less
+++ b/public/css/768.less
@@ -48,10 +48,6 @@ footer {
     li {
       font-size: 1.286em;
     }
-    img {
-      top: 0.65em;
-      left: 13em;
-    }
   }
   #dependency-counts-graph {
     margin: 0 -15%;
